<resources>
    <string name="app_name">CalendarMemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_email_com">example@email.com</string>
    <string name="type_your_password">Type your password</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="back">Back</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="menu">Menu</string>
    <string name="manage_group">Manage Group</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="create_memo">Create Memo</string>
    <string name="post">Post</string>
    <string name="enter_the_new_title">Enter the new title</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="join">Join</string>
    <string name="enter_group">Enter Group</string>
    <string name="edit">Edit</string>
    <string name="textview">TextView</string>
    <string name="delete">delete</string>
</resources>