<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/eventDetailGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="edit"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/eventDetailGoBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewTitle"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="130dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="@+id/editEvent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/eventDetailGoBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewDescription"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitle" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventUpdateAt" />

    <TextView
        android:id="@+id/eventCreateBy"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/eventGroup"
        app:layout_constraintTop_toBottomOf="@+id/viewDescription" />

    <TextView
        android:id="@+id/eventGroup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDescription" />

    <TextView
        android:id="@+id/eventUpdateAt"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventCreateBy" />
</androidx.constraintlayout.widget.ConstraintLayout>